--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before-install:
 
 script:
   - docker run -e CI=true mankit752/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-north-1"
+  app: "frontend"
+  env: "Frontend-env"
+  bucket_name: "elasticbeanstalk-eu-north-1-339712871995"
+  bucket_path: "frontend"
+  on:
+    branch: main
+access_key_id: "$AWS_ACCESS_KEY"
+secret_access_key: "$AWS_SECRET_KEY"
